# imfpy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/jupyter_execute/: example.ipynb  example.py
docs/jupyter_execute/jupyter_execute/: example.ipynb  example.py
docs/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/: example.py
docs/render/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/render/.doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/render/.doctrees/autoapi/: index.doctree
docs/render/.doctrees/autoapi/imfpy/: index.doctree
docs/render/.doctrees/jupyter_execute/: example.doctree
docs/render/.doctrees/jupyter_execute/jupyter_execute/: example.doctree
docs/render/_modules/: index.html
docs/render/_modules/imfpy/: retrievals.html  searches.html  tools.html
docs/render/_sources/: example.ipynb.txt
docs/render/_sources/autoapi/: index.rst.txt
docs/render/_sources/autoapi/imfpy/: index.rst.txt
docs/render/_sources/jupyter_execute/: example.ipynb.txt
docs/render/_sources/jupyter_execute/jupyter_execute/: example.ipynb.txt
docs/render/autoapi/: index.html
docs/render/autoapi/imfpy/: index.html
docs/render/jupyter_execute/: example.html
docs/render/jupyter_execute/jupyter_execute/: example.html
src/imfpy/: __init__.py  retrievals.py  searches.py  tools.py
tests/: test_imfpy.py
vignettes/: imfpy_vignette.ipynb
(+22 files in other folders)
